--- a/TrainTheTrainers/test-output/old/Default suite/classes.html
+++ b/TrainTheTrainers/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>scripting.TC_ShoopperLogin_001</td>
+<td>crossBrowser.FoodPanda</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>removeProductFromWishList</td>
+<td>launchFoodPanda</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -24,21 +24,9 @@
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>loginToApp</td>
-<td>&nbsp;</td></tr>
-<tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>logoutOfApp</td>
-<td>&nbsp;</td></tr>
-<tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>browserTearDown</td>
-<td>&nbsp;</td></tr>
 </table>
