--- a/TrainTheTrainers/test-output/old/Default suite/methods.html
+++ b/TrainTheTrainers/test-output/old/Default suite/methods.html
@@ -1,14 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f4937d">  <td>23/02/27 12:07:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.browserSetup()[pri:0, instance:scripting.TC_ShoopperLogin_001@2525ff7e]">&gt;&gt;browserSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1936722816</td>   <td></td> </tr>
-<tr bgcolor="f4937d">  <td>23/02/27 12:07:26</td>   <td>1536</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.loginToApp()[pri:0, instance:scripting.TC_ShoopperLogin_001@2525ff7e]">&gt;&gt;loginToApp</td> 
-<td>&nbsp;</td>  <td>main@1936722816</td>   <td></td> </tr>
-<tr bgcolor="7ffa75">  <td>23/02/27 12:07:41</td>   <td>16795</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_ShoopperLogin_001.removeProductFromWishList()[pri:0, instance:scripting.TC_ShoopperLogin_001@2525ff7e]">removeProductFromWishList</td> 
-  <td>main@1936722816</td>   <td></td> </tr>
-<tr bgcolor="f4937d">  <td>23/02/27 12:07:43</td>   <td>18424</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.logoutOfApp()[pri:0, instance:scripting.TC_ShoopperLogin_001@2525ff7e]">&lt;&lt;logoutOfApp</td> 
-<td>&nbsp;</td>  <td>main@1936722816</td>   <td></td> </tr>
-<tr bgcolor="f4937d">  <td>23/02/27 12:07:43</td>   <td>18453</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.browserTearDown()[pri:0, instance:scripting.TC_ShoopperLogin_001@2525ff7e]">&lt;&lt;browserTearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="d88cf5">  <td>23/03/08 13:04:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClassTest.browserSetup(java.lang.String)[pri:0, instance:crossBrowser.FoodPanda@306cf3ea]">&gt;&gt;browserSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2119891622</td>   <td></td> </tr>
+<tr bgcolor="aed86c">  <td>23/03/08 13:05:01</td>   <td>1844</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FoodPanda.launchFoodPanda()[pri:0, instance:crossBrowser.FoodPanda@306cf3ea]">launchFoodPanda</td> 
+  <td>main@2119891622</td>   <td></td> </tr>
 </table>
