--- a/TrainTheTrainers/test-output/old/Default suite/reporter-output.html
+++ b/TrainTheTrainers/test-output/old/Default suite/reporter-output.html
@@ -1,5 +1,1 @@
-<h2>Reporter output</h2><table><tr><td>Browser Launched Successfully</td></tr>
-<tr><td>Browser Window is maximized</td></tr>
-<tr><td>Navigated to Home page Successfully</td></tr>
-<tr><td>logout</td></tr>
-</table>
+<h2>Reporter output</h2><table></table>
