--- a/TrainTheTrainers/test-output/old/Suite/groups.html
+++ b/TrainTheTrainers/test-output/old/Suite/groups.html
@@ -1,4 +1,1 @@
-<h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>crm</td><td>Infosys.openingInfy()[pri:0, instance:itCompanies.Infosys@f381794]<br/></td></tr>
-<tr><td>realEstate</td><td>Infosys.openingInfy()[pri:0, instance:itCompanies.Infosys@f381794]<br/></td></tr>
-</table>
+<h2>Groups used for this test run</h2>
