--- a/TrainTheTrainers/test-output/old/Suite/methods-alphabetical.html
+++ b/TrainTheTrainers/test-output/old/Suite/methods-alphabetical.html
@@ -1,6 +1,36 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="aed86c">  <td>23/02/21 16:07:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Infosys.openingInfy()[pri:0, instance:itCompanies.Infosys@f381794]">openingInfy</td> 
-  <td>main@542365801</td>   <td></td> </tr>
+<tr bgcolor="919fcc">  <td>23/03/08 13:06:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClassTest.browserSetup(java.lang.String)[pri:0, instance:crossBrowser.Zomato@13b13b5d]">&gt;&gt;browserSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@284693017</td>   <td></td> </tr>
+<tr bgcolor="919fcc">  <td>23/03/08 13:06:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClassTest.browserSetup(java.lang.String)[pri:0, instance:crossBrowser.Zomato@1eb5174b]">&gt;&gt;browserSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1190720390</td>   <td></td> </tr>
+<tr bgcolor="919fcc">  <td>23/03/08 13:07:04</td>   <td>8278</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClassTest.browserSetup(java.lang.String)[pri:0, instance:crossBrowser.FoodPanda@67080771]">&gt;&gt;browserSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1190720390</td>   <td></td> </tr>
+<tr bgcolor="919fcc">  <td>23/03/08 13:07:13</td>   <td>17417</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClassTest.browserSetup(java.lang.String)[pri:0, instance:crossBrowser.FoodPanda@2892dae4]">&gt;&gt;browserSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@284693017</td>   <td></td> </tr>
+<tr bgcolor="919fcc">  <td>23/03/08 13:07:25</td>   <td>29509</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClassTest.browserSetup(java.lang.String)[pri:0, instance:crossBrowser.Swiggy@355ce81c]">&gt;&gt;browserSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@284693017</td>   <td></td> </tr>
+<tr bgcolor="919fcc">  <td>23/03/08 13:07:41</td>   <td>45321</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClassTest.browserSetup(java.lang.String)[pri:0, instance:crossBrowser.Dominos@29647f75]">&gt;&gt;browserSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@284693017</td>   <td></td> </tr>
+<tr bgcolor="919fcc">  <td>23/03/08 13:07:54</td>   <td>58070</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClassTest.browserSetup(java.lang.String)[pri:0, instance:crossBrowser.Swiggy@72cde7cc]">&gt;&gt;browserSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1190720390</td>   <td></td> </tr>
+<tr bgcolor="919fcc">  <td>23/03/08 13:08:24</td>   <td>87927</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClassTest.browserSetup(java.lang.String)[pri:0, instance:crossBrowser.Dominos@5fd4f8f5]">&gt;&gt;browserSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1190720390</td>   <td></td> </tr>
+<tr bgcolor="85bfbb">  <td>23/03/08 13:07:42</td>   <td>46573</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Dominos.launchDominos()[pri:0, instance:crossBrowser.Dominos@29647f75]">launchDominos</td> 
+  <td>TestNG-tests-1@284693017</td>   <td></td> </tr>
+<tr bgcolor="85bfbb">  <td>23/03/08 13:08:26</td>   <td>90278</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Dominos.launchDominos()[pri:0, instance:crossBrowser.Dominos@5fd4f8f5]">launchDominos</td> 
+  <td>TestNG-tests-2@1190720390</td>   <td></td> </tr>
+<tr bgcolor="9ca58e">  <td>23/03/08 13:07:06</td>   <td>10813</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FoodPanda.launchFoodPanda()[pri:0, instance:crossBrowser.FoodPanda@67080771]">launchFoodPanda</td> 
+  <td>TestNG-tests-2@1190720390</td>   <td></td> </tr>
+<tr bgcolor="9ca58e">  <td>23/03/08 13:07:14</td>   <td>18779</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FoodPanda.launchFoodPanda()[pri:0, instance:crossBrowser.FoodPanda@2892dae4]">launchFoodPanda</td> 
+  <td>TestNG-tests-1@284693017</td>   <td></td> </tr>
+<tr bgcolor="c7e463">  <td>23/03/08 13:07:26</td>   <td>30815</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Swiggy.launchSwiggy()[pri:0, instance:crossBrowser.Swiggy@355ce81c]">launchSwiggy</td> 
+  <td>TestNG-tests-1@284693017</td>   <td></td> </tr>
+<tr bgcolor="c7e463">  <td>23/03/08 13:07:56</td>   <td>60703</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Swiggy.launchSwiggy()[pri:0, instance:crossBrowser.Swiggy@72cde7cc]">launchSwiggy</td> 
+  <td>TestNG-tests-2@1190720390</td>   <td></td> </tr>
+<tr bgcolor="8385ad">  <td>23/03/08 13:06:57</td>   <td>1681</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Zomato.launchZomato()[pri:0, instance:crossBrowser.Zomato@13b13b5d]">launchZomato</td> 
+  <td>TestNG-tests-1@284693017</td>   <td></td> </tr>
+<tr bgcolor="8385ad">  <td>23/03/08 13:06:59</td>   <td>3181</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Zomato.launchZomato()[pri:0, instance:crossBrowser.Zomato@1eb5174b]">launchZomato</td> 
+  <td>TestNG-tests-2@1190720390</td>   <td></td> </tr>
 </table>
